--- a/package.json
+++ b/package.json
@@ -1,48 +1,50 @@
 {
-  "name": "training",
+  "name": "page-camping",
   "version": "1.0.0",
-  "description": "",
+  "description": "Frontend Training with Webpack Template",
+  "main": "index.js",
   "scripts": {
-    "build": "webpack --config './config/webpack.prod.js'",
-    "start": "webpack-dev-server --config './config/webpack.dev.js'",
-    "check": "webpack --config './config/webpack.prod.js' --display-error-details"
+    "build": "webpack --config config/webpack.prod.js",
+    "start": "webpack-dev-server --config config/webpack.dev.js",
+    "check": "webpack --config config/webpack.prod.js --display-error-details"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.14.6",
-    "@babel/preset-env": "^7.20.2",
-    "babel-loader": "^8.2.5",
-    "copy-webpack-plugin": "^11.0.0",
+  "dependencies": {
+    "@babel/core": "^7.24.4",
+    "@babel/preset-env": "^7.24.4",
+    "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^5.0.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "file-loader": "^4.3.0",
     "html-loader": "^0.5.1",
     "html-webpack-harddisk-plugin": "^2.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "html-webpack-skip-assets-plugin": "^1.0.3",
-    "image-minimizer-webpack-plugin": "^3.2.3",
+    "html-webpack-plugin": "^5.6.0",
+    "html-webpack-skip-assets-plugin": "^1.0.4",
+    "image-minimizer-webpack-plugin": "^4.0.0",
     "imagemin": "^8.0.1",
     "imagemin-gifsicle": "^7.0.0",
-    "imagemin-jpegtran": "^7.0.0",
-    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^10.0.1",
-    "mini-css-extract-plugin": "^2.6.1",
-    "node-sass": "^7.0.1",
-    "node-sass-package-importer": "^5.3.2",
-    "normalize.css": "^7.0.0",
-    "postcss": "^8.4.5",
-    "postcss-loader": "^7.0.1",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
-    "stylelint-webpack-plugin": "^2.1.1",
-    "terser-webpack-plugin": "^5.3.5",
-    "url-loader": "^1.1.2",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "webpack-merge": "^5.8.0"
+    "mini-css-extract-plugin": "^2.8.1",
+    "node-sass": "^9.0.0",
+    "node-sass-package-importer": "^5.3.3",
+    "normalize.css": "^8.0.1",
+    "postcss": "^8.4.38",
+    "postcss-loader": "^8.1.1",
+    "sass-loader": "^14.1.1",
+    "style-loader": "^3.3.4",
+    "stylelint-webpack-plugin": "^5.0.0",
+    "sugarss": "^4.0.1",
+    "terser-webpack-plugin": "^5.3.10",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^5.10.0"
   }
 }
