subscribe section done

--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
     "imagemin-pngquant": "^9.0.2",
     "imagemin-svgo": "^10.0.1",
     "mini-css-extract-plugin": "^2.8.1",
-    "node-sass": "^9.0.0",
     "node-sass-package-importer": "^5.3.3",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.38",
     "postcss-loader": "^8.1.1",
+    "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "style-loader": "^3.3.4",
     "stylelint-webpack-plugin": "^5.0.0",
